commit for acb safekey

--- a/configs/acb_config.json
+++ b/configs/acb_config.json
@@ -4,14 +4,14 @@
   "otp_basic_url": "https://keypassapis.mk.com.vn/keypass.ws/verifyOTP",
   "otp_advance_url": "https://keypassapis.mk.com.vn/keypass.ws/verifyOTPCR",
   "transaction_url": "https://keypassapis.mk.com.vn/keypass.ws/createTransaction",
-  "requires_basic_auth": false,
-  "auth_user": "user1",
-  "auth_password": "p@ssw0rd#2025",
+  "requires_basic_auth": true,
+  "auth_user": "keypassAPIApp",
+  "auth_password": "p@ssw0rd#2024",
   "element_ids": {
-        "intro_btnStart":"vn.mk.acb.safekey:id/intro_btnStart",
-        "term_btnAgree":"vn.mk.acb.safekey:id/term_btnAgree",
-        "activation_code_input_xpath":"vn.mk.acb.safekey:id/active_edtCode",
-        "btn_confirm":"vn.mk.acb.safekey:id/active_btnConfirm",
+        "intro_btnStart":"vn.acb.token:id/intro_btnStart",
+        "term_btnAgree":"vn.acb.token:id/term_btnAgree",
+        "activation_code_input_xpath":"vn.acb.token:id/active_edtCode",
+        "btn_confirm":"vn.acb.token:id/active_btnConfirm",
         "number_pin_button_xpath":"//android.widget.Button[@text='{digit}']",
         "finger_btnSkip":"vn.acb.token:id/finger_btnSkip",
         "user_name_button":"vn.acb.token:id/user_txtAbove",
@@ -33,7 +33,7 @@
   },
   "desired_caps": {
         "platformName": "Android",
-        "deviceName": "QV7809H1A6",
+        "deviceName": "R5CR615Q8NR",
         "automationName": "UiAutomator2",
         "appPackage": "vn.acb.token",
         "appActivity": "vn.acb.token.activitys.RegisterActivity",
