--- a/configs/acb_config.json
+++ b/configs/acb_config.json
@@ -1,4 +1,5 @@
 {
+ "issuer_name": "ACBBank",
   "bank_name": "ACBBank",
   "activation_code_url":"https://keypassapis.mk.com.vn/keypass.ws/getActivationCode",
   "otp_basic_url": "https://keypassapis.mk.com.vn/keypass.ws/verifyOTP",
