--- a/configs/hdbank_config.json
+++ b/configs/hdbank_config.json
@@ -1,4 +1,5 @@
 {
+  "issuer_name": "HDBank",
   "bank_name": "HDBank",
   "activation_code_url":"https://192.168.0.186:8405/keypass.ws/getActivationCode",
   "otp_basic_url": "https://192.168.0.186:8405/keypass.ws/verifyOTP",
