--- a/configs/hdbank_config.json
+++ b/configs/hdbank_config.json
@@ -6,6 +6,8 @@
   "otp_advance_url": "https://192.168.0.186:8405/keypass.ws/verifyOTPCR",
   "transaction_url": "https://192.168.0.186:8405/keypass.ws/createTransaction",
   "requires_basic_auth": true,
+  "payload_file": "configs/hdbank_payload.json",
+  "setPIN": "0000",
   "auth_user": "user1",
   "auth_password": "p@ssw0rd#2025",
   "sync_status_id": "com.hdbank.dihdbank:id/tv_sync_status",
