--- a/configs/lpbank_config.json
+++ b/configs/lpbank_config.json
@@ -7,6 +7,7 @@
   "transaction_url": "https://192.168.0.117:8414/keypass.ws/createTransaction",
   "requires_basic_auth": false,
   "payload_file": "configs/lpbank_payload.json",
+  "setPIN": "000000",
   "auth_user": "user1",
   "auth_password": "p@ssw0rd#2025",
   "element_ids": {
