Update flow Add new user

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
-BANK_NAME=ACB
-USER_ID=ACBUser123
+BANK_NAME=SHBank
+USER_ID=SHBankUser123
+LOOP_COUNT=2
+DEVICE_NAME=QV7809H1A6
+
+# ACB,HDBank,TPBank,LPBank,SHBank,...
