--- a/configs/tpbank_config.json
+++ b/configs/tpbank_config.json
@@ -1,10 +1,13 @@
 {
-  "bank_name": "Keypass",
+  "bank_name": "TPBank",
+  "issuer_name": "Keypass",
   "activation_code_url":"https://192.168.0.112:8445/keypass.ws.tpb/getActivationCode",
   "otp_basic_url": "https://192.168.0.112:8445/keypass.ws.tpb/verifyOTP",
   "otp_advance_url": "https://192.168.0.112:8445/keypass.ws.tpb/verifyOTPCR",
   "transaction_url": "https://192.168.0.112:8445/keypass.ws.tpb/createTransaction",
   "requires_basic_auth": false,
+  "payload_file": "configs/tpbank_payload.json",
+  "setPIN": "1235",
   "auth_user": "user1",
   "auth_password": "p@ssw0rd#2025",
   "element_ids": {
