commit for ncb,vib,vtb,tpb,ssi

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-BANK_NAME=SHBank
-USER_ID=SHBankUser123
+BANK_NAME=VIBANK
+USER_ID=VIBUser060901
 LOOP_COUNT=2
-DEVICE_NAME=QV7809H1A6
+DEVICE_NAME=51130DLAQ003XL
 
-# ACB,HDBank,TPBank,LPBank,SHBank,...
+# ACB,HDBank,NCBBANK,TPBank,LPBank,VIBANK,SHBank,...
