--- a/configs/tpbank_config.json
+++ b/configs/tpbank_config.json
@@ -29,12 +29,19 @@
   },
   "desired_caps": {
         "platformName": "Android",
-        "deviceName": "emulator-5554",
+        "deviceName": "",
         "automationName": "UiAutomator2",
         "appPackage": "vn.mk.tpbank.v2.softtoken",
         "appActivity": "vn.tpb.token.MainActivity",
         "noReset": true,
-        "newCommandTimeout": 300
+        "fullReset": false,
+        "newCommandTimeout": 300,
+        "appWaitActivity": "*",
+        "ignoreHiddenApiPolicyError": true,
+        "autoGrantPermissions": true,
+        "adbExecTimeout": 20000
         },
-  "timeout": 10
+  "timeout": 10,
+  "apk_v1_path": "apk/tpbb/old.apk",
+  "apk_v2_path": "apk/tpbb/new.apk"
 }
