fix bug for tpbb

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-BANK_NAME=VTB
-USER_ID=VTBUser080901
-LOOP_COUNT=50
+BANK_NAME=NCBBANK
+USER_ID=NCBBANK123
+LOOP_COUNT=1
 DEVICE_NAME=51130DLAQ003XL
 
 # ACB,HDBank,NCBBANK,TPBank,LPBank,VIBANK,SHBank,VTB...
