update build payload otp and fix bug for vib

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-BANK_NAME=NCBBANK
-USER_ID=NCBBANK100901
-LOOP_COUNT=50
+BANK_NAME=VIBANK
+USER_ID=VIBANK100902
+LOOP_COUNT=10
 DEVICE_NAME=51130DLAQ003XL
 
 # ACB,HDBank,NCBBANK,TPBank,LPBank,VIBANK,SHBank,VTB...
