--- a/configs/vibank_config.json
+++ b/configs/vibank_config.json
@@ -6,7 +6,7 @@
   "otp_advance_url": "http://192.168.0.117:8080/keypass.ws/verifyOTPCR",
   "transaction_url": "http://192.168.0.117:8080/keypass.ws/getOcraQuestion",
   "requires_basic_auth": true,
-  "payload_file": "configs/vib_payload.json",
+  "payload_file": "configs/vibank_payload.json",
   "setPIN": "1111",
   "auth_user": "user1",
   "auth_password": "p@ssw0rD#2025",
@@ -24,6 +24,7 @@
         "basic_tab_button": "com.vib.test:id/tabs_txtBasic",
         "advance_tab_button": "com.vib.test:id/tabs_txtAdvance",
         "otp_show":"com.vib.test:id/otp_txtCode",
+        "otp_advance_show":"com.vib.test:id/otp",
         "challenge_input":"com.vib.test:id/challenge",
         "get_transaction_button":"com.vib.test:id/bt",
         "qr_code_button":"com.vib.test:id/trans_btnQr",
