--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-BANK_NAME=VIBANK
-USER_ID=VIBANK100902
-LOOP_COUNT=10
+BANK_NAME=tpbankbiz
+USER_ID=tpbankbiz110902
+LOOP_COUNT=100
 DEVICE_NAME=51130DLAQ003XL
 
 # ACB,HDBank,NCBBANK,TPBank,LPBank,VIBANK,SHBank,VTB...
